# gemini

./: file-search.ipynb  pyproject.toml  text-classifier.ipynb
data/: L13709.txt  pri.xml
data/connectpoint/: data.csv
