[project]
name = "gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scikit-metrics>=0.1.0",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "python-dotenv>=1.0.1",
]
